--- a/BisLeagues.Presentation/Views/Team/Detail.cshtml
+++ b/BisLeagues.Presentation/Views/Team/Detail.cshtml
@@ -22,7 +22,7 @@
     </div>
     <!-- Page Heading & Breadcrumbs  -->
     <!-- Page Heading banner -->
-    <div class="overlay-dark theme-padding parallax-window" data-appear-top-offset="600" data-parallax="scroll" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
+    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
     </div>
     @*<div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">*@
 
@@ -328,8 +328,8 @@
     <script>
         ClassicEditor
             .create(document.querySelector('#description'), {
-                removePlugins: [ 'ImageUpload' ],
-                })
+                removePlugins: ['ImageUpload'],
+            })
             .catch(error => {
                 console.error(error);
             });
