--- a/BisLeagues.Presentation/Views/Team/Detail.cshtml
+++ b/BisLeagues.Presentation/Views/Team/Detail.cshtml
@@ -274,7 +274,7 @@
                                     <textarea name="description" id="description" style="height: 500px; width: 100%">
                                     @Model.Team.Description
                                  </textarea><br />
-                                    <input type="submit" class="btn btn-success form-control" />
+                                    <input type="submit" class="btn btn-success form-control" value="Gönder Gitsin" />
                                 </form>
                             </div>
                             <!-- Palyer Career -->
