--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
@@ -113,6 +113,9 @@
         <li>
             <a href="@Url.Action("Index", "PointTable")">Puan Durumu</a>
         </li>
+        <li>
+            <a href="@Url.Action("Index", "GoalKing")">Gol Krallığı</a>
+        </li>
 
         @if (!User.Identity.IsAuthenticated)
         {
