--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Nav.cshtml
@@ -46,7 +46,9 @@
                 <li>
                     <a href="@Url.Action("Index", "PointTable")">Puan Durumu</a>
                 </li>
-                <li><a href="#">İletişim</a></li>
+                <li>
+                    <a href="@Url.Action("Index", "GoalKing")">Gol Krallığı</a>
+                </li>
             </ul>
             <!-- Nav List -->
 
