--- a/BisLeagues.Presentation/Views/Match/UpComingMatches.cshtml
+++ b/BisLeagues.Presentation/Views/Match/UpComingMatches.cshtml
@@ -1,7 +1,7 @@
 ﻿@model BisLeagues.Presentation.Models.ViewModels.UpComingMatchesViewModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Gelecek Maçlar";
     Layout = "~/Views/Shared/_Layout_Heading.cshtml";
 }
 @section Heading{
